--- a/asset/pages/blog.html
+++ b/asset/pages/blog.html
@@ -71,7 +71,32 @@
             <h2 class="blog__title">¡ES HORA DE CONQUISTAR UN NUEVO IDIOMA!</h2>
             <h4 class="blog__description">Encuentra los mejores contenidos para fortalecer tus conocimientos en inglés</h4>
         </section>
-        
+        <section class="row">
+            <div class="card container col-md-3" style="width: 18rem;">
+                <img class="card-img-top" src="https://images.unsplash.com/photo-1610477634016-0db86b180190?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Card image cap">
+                <div class="card-body">
+                <h5 class="card-title">Generic title</h5>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit exercitationem vitae similique pariatur atque. Animi ipsam earum minus aspernatur eaque nihil facere quod rerum harum sed velit, illo cupiditate fuga.</p>
+                <a href="#" class="btn btn-primary">Leer articulo</a>
+                </div>
+            </div>
+            <div class="card container col-md-3" style="width: 18rem;">
+                <img class="card-img-top" src="https://images.unsplash.com/photo-1509475826633-fed577a2c71b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80" alt="Card image cap">
+                <div class="card-body">
+                <h5 class="card-title">Generic title</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ut praesentium totam provident harum ratione vel dolor consectetur ad accusamus! Corrupti modi nemo dicta sunt nobis. Vero aspernatur iusto cum.</p>
+                <a href="#" class="btn btn-primary">Leer articulo</a>
+                </div>
+            </div>
+            <div class="card container col-md-3" style="width: 18rem;">
+                <img class="card-img-top" src="https://images.unsplash.com/photo-1643034526999-a4d7a004a4b4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80" alt="Card image cap">
+                <div class="card-body">
+                <h5 class="card-title">Generic title</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ut praesentium totam provident harum ratione vel dolor consectetur ad accusamus! Corrupti modi nemo dicta sunt nobis. Vero aspernatur iusto cum.</p>
+                <a href="#" class="btn btn-primary">Leer articulo</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div> <!-- Start of footer -->
