--- a/asset/pages/floresta.html
+++ b/asset/pages/floresta.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;800;900&display=swap"
         rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
@@ -48,10 +49,10 @@
         <section>
             <nav class="sedes container">
                 <ul class="sedes__items flex-row">
-                    <li><a class="sedes__items__link" href="./poblado.html">Poblado</a></li>
-                    <li><a class="sedes__items__link" href="./santaFe.html">Santa Fe</a></li>
-                    <li><a class="sedes__items__link" href="./laureles.html">Laureles</a></li>
-                    <li><a class="sedes__items__link" href="./floresta.html">Floresta</a></li>
+                    <a class="btn btn-primary" href="./poblado.html" role="button">Poblado</a>
+                    <a class="btn btn-primary" href="./santaFe.html" role="button">Santa Fe</a>
+                    <a class="btn btn-primary" href="./laureles.html" role="button">Laureles</a>
+                    <a class="btn btn-primary" href="./floresta.html" role="button">Floresta</a>
                 </ul>
             </nav>
         </section>
@@ -93,5 +94,6 @@
             <a href="./laureles.html"><i class="fa-solid fa-location-dot"></i>Laureles</a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
