--- a/asset/pages/nuestroPrograma.html
+++ b/asset/pages/nuestroPrograma.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;800;900&display=swap"
         rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/index.css">
 </head>
 
@@ -77,42 +78,40 @@
             </article>
         </section> <!-- End of secondary section-->
         <h2 class="niveles__title">Niveles</h2> <!-- Start of third section -->
-        <section class="niveles flex-row container">
-            <div class="niveles__items">
-                <picture>
-                    <img style="width: 150px;" src="../images/A1.PNG" alt="Imagen con la palabra A1 en naranja y azul">
-                </picture>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum esse ex deserunt totam non ad dicta, architecto libero eos, cupiditate repudiandae sed laboriosam nobis nihil debitis vel ea expedita fugit.</p>
-            </div>
-            <div class="niveles__items">
-                <picture>
-                    <img style="width: 150px;" src="../images/A2.PNG" alt="Imagen con la palabra A2 en naranja y azul">
-                </picture>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum esse ex deserunt totam non ad dicta, architecto libero eos, cupiditate repudiandae sed laboriosam nobis nihil debitis vel ea expedita fugit.</p>
-            </div>
-            <div class="niveles__items">
-                <picture>
-                    <img style="width: 150px;" src="../images/B1.PNG" alt="Imagen con la palabra B1 en naranja y azul">
-                </picture>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum esse ex deserunt totam non ad dicta, architecto libero eos, cupiditate repudiandae sed laboriosam nobis nihil debitis vel ea expedita fugit.</p>
-            </div>
-        </section>
-        <section class="niveles flex-row container">
-            <div class="niveles__items">
-                <picture>
-                    <img style="width: 150px;" src="../images/B2.PNG" alt="Imagen con la palabra B2 en naranja y azul">
-                </picture>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum esse ex deserunt totam non ad dicta, architecto libero eos, cupiditate repudiandae sed laboriosam nobis nihil debitis vel ea expedita fugit.</p>
-            </div>
-            <div class="niveles__items">
-                <picture>
-                    <img style="width: 150px;" src="../images/C1.PNG" alt="Imagen con la palabra C1 en naranja y azul">
-                </picture>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum esse ex deserunt totam non ad dicta, architecto libero eos, cupiditate repudiandae sed laboriosam nobis nihil debitis vel ea expedita fugit.</p>
-            </div>
+        <section class="row container">
+            <div class="card container" style="width: 18rem;">
+                <img src="../images/A1.PNG" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ullam, ipsa esse magni inventore, labore voluptates praesentium eos quae dicta quo dolor nam. Delectus quas impedit magnam est explicabo nam.</p>
+                </div>
+              </div>
+              <div class="card container" style="width: 18rem;">
+                <img src="../images/A2.PNG" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ullam, ipsa esse magni inventore, labore voluptates praesentium eos quae dicta quo dolor nam. Delectus quas impedit magnam est explicabo nam.</p>
+                </div>
+              </div>
+              <div class="card container col-md-4" style="width: 18rem;">
+                <img src="../images/B1.PNG" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ullam, ipsa esse magni inventore, labore voluptates praesentium eos quae dicta quo dolor nam. Delectus quas impedit magnam est explicabo nam.</p>
+                </div>
+              </div>
+              <div class="card container" style="width: 18rem;">
+                <img src="../images/B2.PNG" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ullam, ipsa esse magni inventore, labore voluptates praesentium eos quae dicta quo dolor nam. Delectus quas impedit magnam est explicabo nam.</p>
+                </div>
+              </div>
+              <div class="card container" style="width: 18rem;">
+                <img src="../images/C1.PNG" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum ullam, ipsa esse magni inventore, labore voluptates praesentium eos quae dicta quo dolor nam. Delectus quas impedit magnam est explicabo nam.</p>
+                </div>
+              </div>
         </section>
     </main>
-    
+
     <footer class="footer">
         <div> <!-- Start of footer -->
             <picture class="footer_logo">
@@ -138,6 +137,7 @@
             <a href="./laureles.html"><i class="fa-solid fa-location-dot"></i>Laureles</a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
