Responsive on pages Index and Nuestro Programa fixed

--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
                 </div>
             </article>
         </section> <!-- End of main section-->
-        <section class="secondary__section__items flex-row"> <!-- Start of secondary section -->
-            <div class="secondary__section flex-column">
+        <section class="grid__container"> <!-- Start of secondary section -->
+            <div class="horarios secondary__section flex-column">
                 <picture>
                     <img class="secondary__section__img" src="./asset/images/flexibilidad-de-horarios.png" alt="Imagen de un reloj">
                 </picture>
                 <h2 class="flex-column">Flexibilidad de horarios</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere necessitatibus officiis repellendus, architecto quos sequi qui saepe voluptas veniam nisi? Aspernatur iure laudantium harum sint at accusantium facere architecto consequatur.</p>
             </div>
-            <div class="secondary__section flex-column">
+            <div class="libertad secondary__section flex-column">
                 <picture>
                     <img class="secondary__section__img" src="./asset/images/clases-virtuales.png" alt="Imagen de personas realizando varias poses">
                 </picture>
                 <h2 class="flex-column">Libertad de asistir a la sede o virtual</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere necessitatibus officiis repellendus, architecto quos sequi qui saepe voluptas veniam nisi? Aspernatur iure laudantium harum sint at accusantium facere architecto consequatur.</p>
             </div>
-            <div class="secondary__section flex-column">
+            <div class="estudiantes secondary__section flex-column">
                 <picture>
                     <img class="secondary__section__img" src="./asset/images/maximo-8-estudiantes.png" alt="Dos personas en burbujas de conversacion">
                 </picture>
